[package]
name = "rld"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rld"
path = "src/main.rs"

[dependencies]
log = "0.4.18"
pretty_env_logger = "0.5.0"
anyhow = "1.0"
bip39 = { version = "2.0.0", features = ["serde"] }
bitcoin = "0.30.2"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2.1.0"
itertools = "0.12.1"
lightning = { version = "0.0.123", features = ["max_level_trace"] }
lightning-net-tokio = "0.0.123"
lightning-background-processor = { version = "0.0.123", features = ["futures"] }
lightning-block-sync = { version = "0.0.123", features = ["rpc-client", "tokio"] }
lightning-persister = "0.0.123"
lightning-invoice = { version = "0.31.0", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full", "sync"] }
clap = { version = "4.5.3", features = ["derive"] }
bitcoincore-rpc = "0.17.0"
base64 = "0.13.1"
hex = "0.4.3"

bdk = "1.0.0-alpha.8"
bdk_file_store = "0.8.0"
bdk_bitcoind_rpc = "0.7.0"

tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
tonic-web = "0.11"
tonic-reflection = "0.11"
tower-http = "0.4"
macaroon = "0.3.0"
rcgen = "0.13.0"

[build-dependencies]
tonic-build = "0.11"
