[package]
name = "rld"
version = "0.1.0"
edition = "2021"

[lib]
name = "rld"
path = "src/lib.rs"

[[bin]]
name = "rld"
path = "src/bin/main.rs"

[dependencies]
log = "0.4.18"
pretty_env_logger = "0.5.0"
anyhow = "1.0"
bip39 = { version = "2.0.0", features = ["serde"] }
bitcoin = "0.31.2"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2.1.0"
itertools = "0.12.1"
lightning = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "3beb16cb30592c101ca16e6e650ec6c4b6dd99cb", features = ["max_level_trace"] }
lightning-net-tokio = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "3beb16cb30592c101ca16e6e650ec6c4b6dd99cb" }
lightning-background-processor = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "3beb16cb30592c101ca16e6e650ec6c4b6dd99cb", features = ["futures"] }
lightning-block-sync = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "3beb16cb30592c101ca16e6e650ec6c4b6dd99cb", features = ["rpc-client", "tokio"] }
lightning-persister = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "3beb16cb30592c101ca16e6e650ec6c4b6dd99cb" }
lightning-invoice = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "3beb16cb30592c101ca16e6e650ec6c4b6dd99cb", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full", "sync"] }
clap = { version = "4.5.3", features = ["derive"] }
bitcoincore-rpc = "0.18.0"
base64 = "0.13.1"
hex = "0.4.3"

bdk = "=1.0.0-alpha.10"
bdk_file_store = "0.10.0"
bdk_bitcoind_rpc = "0.9.0"

tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
tonic-web = "0.11"
tonic-reflection = "0.11"
tower-http = "0.4"
macaroon = "0.3.0"
rcgen = "0.13.0"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
dotenv = "0.15.0"
bitcoind = { version = "0.34.2", features = ["25_1"] }
lazy_static = "1.4.0"
lnd = { version = "0.1.4", git = "https://github.com/benthecarman/lnd-test-util.git", branch = "optional-bitcoind", features = ["lnd_0_17_5"] }
