[package]
name = "rld"
version = "0.1.0"
edition = "2021"

[lib]
name = "rld"
path = "src/lib.rs"

[[bin]]
name = "rld"
path = "src/bin/main.rs"

[dependencies]
log = "0.4.18"
pretty_env_logger = "0.5.0"
anyhow = "1.0"
bip39 = { version = "2.0.0", features = ["serde"] }
bitcoin = "0.32.5"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2.1.0"
itertools = "0.12.1"
lightning = { version = "0.1.1" }
lightning-net-tokio = { version = "0.1.0" }
lightning-background-processor = { version = "0.1.0", features = ["futures"] }
lightning-block-sync = { version = "0.1.0", features = ["rpc-client", "tokio"] }
lightning-persister = { version = "0.1.0" }
lightning-invoice = { version = "0.33.1", features = ["serde", "std"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full", "sync"] }
clap = { version = "4.5.3", features = ["derive"] }
bitcoincore-rpc = "0.19.0"
base64 = "0.13.1"
hex = "0.4.3"
home = "0.5.9"

bdk_wallet = { version = "1.1.0", features = ["file_store"] }
bdk_file_store = "0.18.1"
bdk_bitcoind_rpc = "0.18.0"

tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
tonic-web = "0.11"
tonic-reflection = "0.11"
tower-http = "0.4"
macaroon = "0.3.0"
rcgen = "0.13.0"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
dotenv = "0.15.0"
corepc-node = { version = "0.5.0", features = ["28_0"] }
test-log = "0.2.17"
lazy_static = "1.4.0"
lnd = { version = "0.1.6", git = "https://github.com/benthecarman/lnd-test-util.git", branch = "bitcoind-36", features = ["lnd_0_18_5"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "macros"] }
url = "2.5.4"
